* parameters.tmpl: New. Template for parameter configuration.  * TUNE/tune.sh: Update.  * README: Update.
git-svn-id: file:///home/manu/work/irace/svn/trunk@8 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/README
+++ b/README
@@ -8,7 +8,7 @@ Configuration
   '.tmpl' suffix, and modify them following the instructions in each
   file.
 
-* Make a copy of the file TUNE/parameters.tmpl as TUNE/parameters.txt,
+* Make a copy of the file parameters.tmpl as parameters.txt,
   and modify it following the instructions there.
 
 * Put the instances in Instances/
