* submitjobs.sh: Call hooks/tune-main.  * README: Update.  * TUNE/tune-main.tmpl: Move from here...  * hooks/tune-main.tmpl: ... to here.  * examples/beamaco/parameters.txt: Update.  * examples/beamaco/hook-run: Update.
git-svn-id: file:///home/manu/work/irace/svn/trunk@16 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/README
+++ b/README
@@ -6,17 +6,14 @@ Configuration
 
 * For each template hook (*.tmpl) in hooks/, make a copy removing the
   '.tmpl' suffix, and modify them following the instructions in each
-  file. See the examples in hooks/examples/. The hooks should be
-  executable.
+  file. In particular, tune-main.tmpl should be adjusted depending on
+  your usage (local, cluster, etc).  The hooks should be
+  executable. See the examples in examples/.
 
 * Make a copy of the file parameters.tmpl as parameters.txt,
   and modify it following the instructions there.
 
 * Put the instances in Instances/
-
-* Make a copy of TUNE/tune-main.tmpl to TUNE/tune-main and adjust it
-  depending on your usage (local, cluster, etc). See the examples in
-  hooks/examples/tune-main-*. TUNE/tune-main should be executable.
 
 * Call submitJobs.sh with the number of repetitions of Iterated F-race
   to be executed in parallel.
