* tune-conf.tmpl: New template file for configuration options.  * TUNE/race-wrapper.R: Delete old commented out code that is not used    anymore. Move debug.level and signif.digit to tune-conf.tmpl.  * TUNE/tune.R: Read configuration from ../tune-conf.  * README: Update.
git-svn-id: file:///home/manu/work/irace/svn/trunk@19 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/README
+++ b/README
@@ -13,6 +13,9 @@ Configuration
 * Make a copy of the file parameters.tmpl as parameters.txt,
   and modify it following the instructions there.
 
+* Make a copy of the file tune-conf.tmpl as tune-conf
+  and modify it following the instructions there.
+
 * Put the instances in Instances/
 
 * Call submitJobs.sh with the number of repetitions of Iterated F-race
