* hrace.R (hrace.wrapper): Save stats and full results in    execdir. Use global prob.vector.type.c.list.  * race-wrapper.R (canonical.dirname): New.    (race.init): Handle a instances list file.    (race.wrapper): Handle per-instance parameters.  * submitjobs.sh: Add EXECDIR parameter.  * README: Mention instance list file.  * tune.conf.tmpl (.tune.tuning.instances.file): New var.  * tune.R: Print its value. Set width to 500 chars to avoid wrapping.  * util.R (generate.configurations.normal): Cleanup. Fix bug with null    prob vector.
git-svn-id: file:///home/manu/work/irace/svn/trunk@56 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/README
+++ b/README
@@ -16,7 +16,10 @@ Configuration
 * Copy the file parameters.tmpl to your tuning directory as
   parameters.txt, and modify it following the instructions there.
 
-* Put the instances in tuning/Instances/
+* Put the instances in tuning/Instances/. In addition, you can create
+  a file that specifies which instances from that directory should be
+  run and which instance-specific parameters to use. See
+  tune-conf.tmpl and instances-list.tmpl for examples.
 
 * Copy the file tune-conf.tmpl to your tuning/ directory as tune-conf
   and modify it following the instructions there.
@@ -28,7 +31,8 @@ Configuration
 
 * Results will appear in tuning/TUNE-dd, where dd is a number. Be
   careful, if you run submitjobs.sh again, these directories will be
-  deleted.
+  deleted. Check the help of submitjobs.sh by running it without
+  parameters.
 
 If you find that you need to modify anything else, something is not
 clear or if you have problems: <manuel.lopez-ibanez@ulb.ac.be>
