--- a/README
+++ b/README
@@ -32,7 +32,12 @@ Configuration
 * Results will appear in tuning/TUNE-dd, where dd is a number. Be
   careful, if you run submitjobs.sh again, these directories will be
   deleted. Check the help of submitjobs.sh by running it without
-  parameters.
+  parameters.  In each directory, there will be also two Rdata files:
+  fullresults.Rdata and stats.Rdata. You can examine their contents
+  within R with the commands:
+  
+    load("fullresults.Rdata"); print(fullresults)
 
+  
 If you find that you need to modify anything else, something is not
 clear or if you have problems: <manuel.lopez-ibanez@ulb.ac.be>
