* doc/documentation.tex: Remove FIXME.
git-svn-id: file:///home/manu/work/irace/svn/trunk@399 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/doc/documentation.tex
+++ b/doc/documentation.tex
@@ -633,7 +633,7 @@ given in Section~\ref{sec:applications}.
 
 \begin{table}[t]
   \centering
-  \caption{Configuration options of \irace corresponding to the description of Iterated racing given in Section~\ref{sec:irace}. The full list of options is available in \autoref{appendixA}. \MANUEL{Anything missing?}}
+  \caption{Configuration options of \irace corresponding to the description of Iterated racing given in Section~\ref{sec:irace}. The full list of options is available in \autoref{appendixA}.}
   \label{tab:options}
   \begin{tabular}[c]{rl}
 \toprule
