* readConfiguration.R: add FIXME about fixed params.  * TODO: Add new item about it.
git-svn-id: file:///home/manu/work/irace/svn/trunk@460 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/TODO
+++ b/TODO
@@ -2,6 +2,9 @@
 
 TODO:
 
+ * Handle properly fixed parameters in candidatesFile (see FIXME in
+   readConfigurations.R).
+
  * Add command-line option --cluster=[sge|pbs] to choose the type of
    cluster. Then, hook-run calls qsub and prints a jobID. jobID must
    be a single word ([0-9a-z._-@]+); if not or length(jobID) != 1 or
