* race.R (format.precis): Do not attempt to wrap long fields. Just    print as much as possible right-adjusted to 79 columns; otherwise,    overflow the field width.  * TODO: New item about reducing the verbosity of race package.
git-svn-id: file:///home/manu/work/irace/svn/trunk@468 d10a546b-4b69-48e5-8b66-49ccea70c6a4

--- a/TODO
+++ b/TODO
@@ -2,6 +2,9 @@
 
 TODO:
 
+ * Reduce the output of the race package. Only report copyright info
+   once. Do not duplicate information already given by irace.
+
  * Handle properly fixed parameters in candidatesFile (see FIXME in
    readConfigurations.R).
 
